# media-admin

./: .gitignore  .npmrc  AGENTS.md  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  typeshare.toml  vite.config.ts
.cargo/: config.toml
.github/workflows/: tauri-build.yml
apps/desktop/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lib.rs  main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/web/: eslint.config.js  index.html  openapi.json  orval.config.ts  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: index.css  main.tsx  routeTree.gen.ts
apps/web/src/api/: axios-instance.ts  generated.schemas.ts  generated.ts  index.ts  taskmill-exec-log.ts  taskmill-snapshot.ts  taskmill-subtitle-preview.ts
apps/web/src/component/: fs-dir-tree-select.tsx  subtitle-web-modal.tsx
apps/web/src/components/: app-page.tsx  app-shell.tsx  base-pagination.tsx  data-table.tsx  desktop-window-controls.tsx  ffmpeg-setup-card.tsx  fs-dir-tree-select.tsx  local-video-player.tsx  media-root-list-card.tsx  queue-controls.tsx  rhf-heroui-fields.tsx  scan-generate-subtitle-drawer-form.tsx  stash-config-form-group.tsx  stash-scene-cover.tsx  subtitle-detail.tsx  subtitle-pipeline-form-groups.tsx  subtitle-task-create-drawer-form.tsx  subtitle-translate-task-create-drawer-form.tsx  subtitle-web-modal.tsx  task-type-filter.tsx  taskmill-active-tasks-panel.tsx  taskmill-demo-exec-log-panel.tsx  taskmill-demo-history-panel.tsx  taskmill-demo-snapshot-panel.tsx  taskmill-exec-log-panel.tsx  taskmill-exec-log-shared.tsx  taskmill-pipeline-detail-drawer.tsx  taskmill-queue-controls.tsx  taskmill-view-model.ts  video-playlist-drawer.tsx  whisper-models-setup-card.tsx  xunlei-subtitle.tsx
apps/web/src/config/: index.tsx
apps/web/src/lib/: iconify-icons.ts  setup-download-taskmill.ts  task-type-labels.ts  taskmill-time.ts  video-play-search.ts  videojs-playlist-controls.ts
apps/web/src/request/: index.ts  job.ts  media-library.ts  settings.ts  stash.ts  subtitle.ts  utils.ts
crates/api/: Cargo.toml
crates/api/src/: app_config_store.rs  config.rs  error.rs  lib.rs  log.rs  state.rs
crates/api/src/core/: fs.rs  mod.rs  openai.rs  stash.rs  subtitle_task.rs  subtitle_worker.rs  subtitles_web.rs  video_folder_scan.rs
crates/api/src/entity/: subtitle_task.rs
crates/api/src/openapi/: doc.rs  mod.rs
crates/api/src/routes/: mod.rs
crates/api/src/routes/emby/: mod.rs
crates/api/src/routes/fs/: mod.rs
crates/api/src/routes/job_demo/: mod.rs
crates/api/src/routes/jobs/: mod.rs
crates/api/src/routes/media_library/: mod.rs
crates/api/src/routes/settings/: mod.rs
crates/api/src/routes/setup/: mod.rs
crates/api/src/routes/sse/: mod.rs
crates/api/src/routes/stash/: mod.rs
crates/api/src/routes/subtitle_task/: mod.rs
crates/api/src/routes/subtitle_translate_task/: mod.rs
crates/api/src/routes/subtitle_web/: mod.rs
crates/api/src/routes/video_folder_scan/: mod.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260509000001_init.sql  20260515000001_drop_legacy_subtitle_tasks.sql  20260518000001_app_settings.sql  20260522000100_create_media_library.sql
crates/db/src/: app_settings.rs  lib.rs
crates/db/src/entity/: generated_subtitles.rs  mod.rs  subtitle_task.rs  subtitle_task_record.rs  subtitle_translate_task.rs  subtitle_translate_task_record.rs
crates/db/src/migration/: m20260509_000001_init.rs  mod.rs
crates/openai/: Cargo.toml
crates/openai/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: app_config.rs  fs.rs  lib.rs  media_library.rs  media_paths.rs  stash.rs  subtitle_translate_worker.rs  subtitle_worker.rs  subtitles_web.rs  task_queue.rs  video_folder_scan.rs  xunlei.rs
crates/service/src/emby/: mod.rs
crates/service/src/fs/: mod.rs  video_probe.rs  video_stream.rs  video_transcode.rs
crates/service/src/job/: control.rs  mod.rs  setup_download_exec.rs  spawn.rs  storage.rs  submit.rs  translate_only.rs  types.rs  video_pipeline.rs
crates/service/src/setup_download/: catalog.rs  ffmpeg.rs  mod.rs  progress.rs  staging.rs  state.rs  status.rs  submit.rs  types.rs  whisper.rs
crates/service/src/stash/: entities.rs  filter.rs  metadata.rs  mod.rs  path.rs  scenes.rs  types.rs
crates/service/src/subtitle_task/: mod.rs  types.rs
crates/service/src/subtitle_translate_task/: mod.rs  types.rs
crates/subtitle/: Cargo.toml
crates/subtitle/src/: file.rs  generate.rs  lib.rs  pipeline.rs  segment_filter.rs  translate.rs  types.rs  utils.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  lib.rs  log.rs  types.rs
crates/whisper/: Cargo.toml
crates/whisper/src/: decode_gate.rs  engine_cache.rs  generate.rs  lib.rs  types.rs  vad.rs  wav.rs  whisper.rs
examples/: ffmpeg_whisper_minimal.rs  simple.rs  stash_find_scenes.rs  translate_srt.rs  whisper_trans.rs
migrations/: 20260503120000_init.sql  20260503130000_subtitle_generation_jobs.sql
src/: api.ts  config.ts  main.tsx  routeTree.tsx  router.tsx
src-rs/: config.rs  db.rs  error.rs  generation_job.rs  lib.rs  local_pipeline.rs  log.rs  main.rs  state.rs  whisper_transcribe.rs  xunlei.rs
src-rs/api/: log.rs  mod.rs
src-rs/api/middleware/: mod.rs
src-rs/api/routes/: mod.rs
src-rs/core/: ffmpeg.rs  fs.rs  local_pipeline.rs  mod.rs  openai.rs  subtitle_file.rs  subtitle_gen.rs  subtitle_job.rs  subtitle_task.rs  subtitles_web.rs  vad.rs  whisper.rs  xunlei.rs
src-rs/entity/: generated_subtitles.rs  mod.rs
src-rs/migration/: m20260509_000001_init.rs  mod.rs
src-rs/routes/: local_subtitles.rs  mod.rs  subtitles.rs
src/config/: index.tsx
src/layouts/: RootLayout.tsx
src/pages/: SubtitlePage.tsx
src/request/: index.ts  stash.ts  utils.ts
src/routes/: __root.tsx  file-system.tsx  index.tsx  stash-scenes.tsx  subtitle-task.tsx  subtitle-web.tsx
src/types/: api.ts  chonky2.d.ts  index.ts  stash-graphql.ts
(+77 files in other folders)
