[workspace]
members = [
  "apps/server",
  "apps/desktop",
  "crates/api",
  "crates/whisper",
  "crates/utils",
  "crates/subtitle",
]


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"
tokio = { version = "1.5.2", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "io-util",
  "process",
  "time",
] }
