[package]
name = "media-admin-desktop"
version = "0.1.0"
description = "Media Admin desktop (Tauri)"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "media_admin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
log = "0.4"
dotenvy = "0.15"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
media-admin-api = { path = "../../crates/api" }
