[package]
name = "media-admin-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "ma_api"

[dependencies]
anyhow.workspace = true
dotenvy = "0.15"

axum = { version = "0.8.9", features = ["macros", "json"] }
axum-extra = { version = "0.12.5", features = ["with-rejection"] }

chrono = "0.4"
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.13.3", features = [
  "json",
  "rustls",
  "stream",
], default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
serde.workspace = true
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }


hf-hub = { version = "0.5", features = ["tokio"] }
zip = "8.6.0"
sha1 = "0.11.0"
thiserror = "2.0.18"
futures = "0.3.32"

tokio.workspace = true
tokio-stream = "0.1.18"

tower-http = { version = "0.6.9", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
typeshare = "1.0.5"
async-openai = { version = "0.38.0", default-features = false, features = [
  "rustls",
  "chat-completion",
] }
sea-orm = { version = "1.1.20", default-features = false, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
