[package]
name = "media-admin-db"
version = "0.1.0"
edition = "2024"

[lib]
name = "ma_db"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true

media-admin-utils = { path = "../../crates/utils" }

sea-orm.workspace = true
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
