[package]
name = "media-admin-service"
version = "0.1.0"
edition = "2024"

[lib]
name = "ma_service"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
typeshare.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sea-orm.workspace = true

media-admin-utils = { path = "../../crates/utils" }
media-admin-subtitle = { path = "../../crates/subtitle" }
media-admin-db = { path = "../../crates/db" }

base64 = "0.22"
sha1 = "0.11.0"
hf-hub = { version = "0.5", features = ["tokio"] }
hex = "0.4"
urlencoding = "2"