[package]
name = "media-admin-subtitle"
version = "0.1.0"
edition = "2024"

[lib]
name = "ma_subtitle"

[dependencies]
serde.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio.workspace = true

async-openai = { version = "0.38.0", default-features = false, features = [
  "rustls",
  "chat-completion",
] }

media-admin-whisper = { path = "../../crates/whisper" }
media-admin-utils = { path = "../../crates/utils" }
