[package]
name = "media-admin-utils"
version = "0.1.0"
edition = "2024"

[lib]
name = "ma_utils"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
typeshare.workspace = true
utoipa.workspace = true

tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

